<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="abrirCompeticoes"
    tools:context=".ClubeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/TextViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/clubes_brasileiros"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125" />

        <EditText
            android:id="@+id/editTextClube"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/nomeDoClube"
            android:inputType="text|textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewClube" />

        <TextView
            android:id="@+id/textViewClube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:labelFor="@id/editTextClube"
            android:text="Clube:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextViewTitulo" />

        <RadioGroup
            android:id="@+id/radioGroupDivisao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDivisão">

            <RadioButton
                android:id="@+id/radioButtonSerieA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/serieA" />

            <RadioButton
                android:id="@+id/radioButtonSerieB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/serieB" />

            <RadioButton
                android:id="@+id/radioButtonSerieC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/serieC" />

            <RadioButton
                android:id="@+id/radioButtonSerieD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/serieD" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBoxMundial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/temMundial"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerEstado" />

        <Spinner
            android:id="@+id/spinnerEstado"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEstados" />

        <TextView
            android:id="@+id/textViewDivisão"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/radioGroupDivisao"
            android:text="@string/divisao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextClube" />

        <TextView
            android:id="@+id/textViewEstados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/spinnerEstado"
            android:text="@string/estado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupDivisao" />

        <TextView
            android:id="@+id/textViewDataFundacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/data_fundacao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxMundial" />

        <EditText
            android:id="@+id/editTextDataFundacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/data_fundacao"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDataFundacao" />

        <Button
            android:id="@+id/buttonCompeticao"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="abrirAnotacoes"
            android:text="@string/competicoes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextDataFundacao"
            app:layout_constraintTop_toBottomOf="@+id/textViewDataFundacao" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

